// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0APIClient getSSOData should call client.client.getSSOData 1`] = `
Array [
  true,
  [Function],
]
`;

exports[`Auth0APIClient getUserCountry should call getUserCountry 1`] = `
Array [
  "cb",
]
`;

exports[`Auth0APIClient init with overrides forwards options to WebAuth 1`] = `
Object {
  "_sendTelemetry": true,
  "_telemetryInfo": Object {},
  "audience": "foo",
  "clientID": "cid",
  "domain": "me.auth0.com",
  "leeway": 60,
  "nonce": "nonce",
  "overrides": Object {
    "__jwks_uri": "https://jwks.com",
    "__tenant": "tenant1",
    "__token_issuer": "issuer1",
  },
  "plugins": Array [
    Object {
      "name": "ExamplePlugin",
    },
  ],
  "redirectUri": "//localhost:8080/login/callback",
  "responseMode": "query",
  "responseType": "code",
  "state": "state",
}
`;

exports[`Auth0APIClient logIn with credentials should call client.login 1`] = `
Object {
  "nonce": undefined,
  "popupOptions": undefined,
  "realm": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should call popup.loginWithCredentials when redirect is false and sso is false 1`] = `
Object {
  "nonce": undefined,
  "popupOptions": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials should call popup.loginWithCredentials when redirect is false and sso is true 1`] = `
Object {
  "nonce": undefined,
  "popupOptions": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call authorize when redirect===true 1`] = `
Object {
  "nonce": undefined,
  "popupOptions": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call popup.authorize when redirect===false 1`] = `
Object {
  "nonce": undefined,
  "owp": true,
  "popupOptions": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient parseHash should pass __enableIdPInitiatedLogin when options._enableIdPInitiatedLogin===true 1`] = `
Array [
  Object {
    "__enableIdPInitiatedLogin": true,
    "hash": "hash",
    "nonce": undefined,
    "state": undefined,
  },
  "cb",
]
`;

exports[`Auth0APIClient parseHash should pass __enableIdPInitiatedLogin when options._enableImpersonation===true 1`] = `
Array [
  Object {
    "__enableIdPInitiatedLogin": true,
    "hash": "hash",
    "nonce": undefined,
    "state": undefined,
  },
  "cb",
]
`;

exports[`Auth0APIClient parseHash should pass __enableIdPInitiatedLogin:false when options._enableImpersonation and options._enableIdPInitiatedLogin are not present 1`] = `
Array [
  Object {
    "__enableIdPInitiatedLogin": false,
    "hash": "hash",
    "nonce": undefined,
    "state": undefined,
  },
  "cb",
]
`;

exports[`Auth0APIClient passwordlessStart should call client.passwordlessStart 1`] = `
Array [
  Object {
    "foo": "bar",
  },
  [Function],
]
`;

exports[`Auth0APIClient passwordlessVerify should call client.passwordlessLogin 1`] = `
Array [
  Object {
    "foo": "bar",
    "popup": true,
  },
  [Function],
]
`;
